--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     <button id="RemoveBread" onclick="RemoveBread()">Remove</button>
 
     <br>
+    <p id="feedback"></p>
+    <br>
+
+    <button id="Check" onclick="CheckCombination()">Check</button>
 
 
     <noscript>ENABLE JAVASCRIPT PLEASE</noscript>
