--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,15 @@
 
     <img src="breadGatewayOpen.png" class="breadImg" alt="The Bread Gateway"></img>
 
-    <h2>The door has opened...</h2>
+    <h3>The gate has opened and revealed three areas of the distant planet</h3>
+
+    <h2>
+        <a href="https://turbowarp.org/465637074/embed">The Chocolate Craters,</a>
+        <a href="https://turbowarp.org/465195354/embed">The Chip Peaks</a>
+        <p style="display: inline;"> and </p>
+        <a href="https://turbowarp.org/465686648/embed">Bread Bay</a>
+    </h2>
+
 
 </body>
 
